syntax = "proto3";

option go_package = "./;pb";

package pb;

// request
message Message{
  string body = 1;
}

message ReqBase{
  string UserOrOrg  = 1;
  string ProjectName = 2;
  string TreePath = 3;
}

message ReqList{
  string UserOrOrg  = 1;
  string ProjectName = 2;
  string TreePath = 3;
}

message RespBool{
  bool body = 1;
}

// func
service RepoService{
  rpc S(Message) returns (Message){}
  rpc List(ReqList) returns (Message){}
}


